--- a/src/app/components/contact/contact.scss
+++ b/src/app/components/contact/contact.scss
@@ -16,11 +16,12 @@
   height: 100vh;
   font-family: Arial, sans-serif;
   padding: 20px;
+  width: 100vw;
+  box-sizing: border-box;
 }
 
 .contact-header {
   text-align: center;
-  margin-bottom: 40px;
 }
 
 .contact-header h1 {
@@ -36,6 +37,7 @@
 
 .contact-form {
   width: 100%;
+  max-width: 650px;
   padding: 40px;
 }
 
