--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -1,15 +1,3 @@
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.content {
-  flex: 1; /* pushes footer to bottom */
-  padding: 2rem;
-}
 
 .footer {
   width: 100%;
@@ -43,7 +31,7 @@ body {
   text-decoration: none;
   margin-left: 0.2rem;
   width: 34px;
-    height: 34px;
+  height: 34px;
 }
 
 .footer-name {
