--- a/src/app/components/title/title.scss
+++ b/src/app/components/title/title.scss
@@ -12,7 +12,7 @@
     font-size: 2rem;
     font-weight: 700;
     color: var(--custom-blue); // match your screenshot color
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.7rem;
     padding: 0;
   }
 
@@ -28,6 +28,6 @@
   p {
     font-size: 1rem;
     color: #555;
-    margin-top: -3rem;
+    margin-top: -3.5rem;
   }
 }
